--- a/src/app/components/welcome/welcome.component.html
+++ b/src/app/components/welcome/welcome.component.html
@@ -1,4 +1,8 @@
 <div class="hero">
   <app-nav class="navbar"></app-nav>
-  <div class="content"></div>
+  <div class="content">
+    <section>
+        Allt du behöver inom web
+    </section>
+  </div>
 </div>
