Fixed position of send message Made url configurable

--- a/src/app/components/contact/contact.component.css
+++ b/src/app/components/contact/contact.component.css
@@ -99,6 +99,7 @@ button.sending {
   grid-template-columns: 20px [form] 1fr 20px;
   grid-template-rows: 20% 1fr;
   align-items: start;
+  height: 100%;
 }
 
 .sendmessage {
