Changed phone to tel

--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -28,7 +28,7 @@
       </div>
 
       <div class="formgroup phone">
-        <input type="phone" formControlName="phone" placeholder="070-1234556" />
+        <input type="tel" formControlName="phone" placeholder="070-1234556" />
       </div>
 
       <div class="formgroup message">
