--- a/src/app/components/contact/contact.component.css
+++ b/src/app/components/contact/contact.component.css
@@ -5,7 +5,7 @@
 
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: 95px auto;
+  grid-template-rows: 135px auto;
 }
 
 .hero .content {
@@ -18,10 +18,11 @@
 form {
   display: grid;
   grid-column: form;
+  grid-row: 2;
 
   align-items: center;
   justify-content: stretch;
-  grid-row-gap: 3%;
+  grid-row-gap: 10px;
 }
 
 form .formgroup {
